# leetcode

./: .gitignore  CMakeLists.txt  CMakeLists_backup.txt  conanfile.py  new_task.py
009-Palindrome-Number/: solution_test.cpp
021-Merge-Two-Sorted-Lists/: solution.cpp  solution.hpp
026-Remove-Duplicates-From-Sorted-Array/: solution.cpp  solution_test.cpp
027-Remove-Element/: solution.hpp  solution_test.cpp
028-Implement-strStr/: solution.cpp  solution.hpp  solution_test.cpp
035-Search-Insert-Position/: solution_test.cpp
058-Length-Of-Last-Word/: solution.hpp  solution_test.cpp
066-Plus-One/: solution_test.cpp
067-Add-Binary/: solution.hpp
068-Sqrtx/: solution.cpp
070-Climbing-Stars/: solution.cpp
088-Merge-Sorted-Array/: solution.cpp  solution.hpp  solution_test.cpp
100-Same-Tree/: solution.hpp
algorithms/ActivitySelection/: interface.h  solution.cpp
algorithms/FractionalKnapsack/: interface.h  solution.cpp  solution_test.cpp
algorithms/MaxSubArray/: interface.h  solution.cpp  solution_test.cpp
algorithms/quantile/: interface.h  solution.cpp  solution_test.cpp
algorithms/quicksort/: interface.h  solution.cpp  solution_test.cpp
problems/009-Palindrome-Number/: solution.cpp  solution.hpp
problems/021-Merge-Two-Sorted-Lists/: solution_test.cpp
problems/026-Remove-Duplicates-From-Sorted-Array/: solution.hpp
problems/035-Search-Insert-Position/: solution.cpp  solution.hpp  solution_best.cpp
problems/058-Length-Of-Last-Word/: solution.cpp
problems/066-Plus-One/: solution.cpp  solution.hpp
problems/067-Add-Binary/: solution.cpp  solution_test.cpp
problems/068-Sqrtx/: solution.hpp  solution_test.cpp
problems/070-Climbing-Stars/: solution.hpp  solution_test.cpp
problems/083-Delete-Duplicates/: solution.cpp  solution.hpp  solution_test.cpp
problems/088-Merge-Sorted-Array/: solution.cpp  solution.hpp  solution_test.cpp
problems/100-Same-Tree/: solution.cpp
problems/2011-Final-Value-of-Variable-After-Performing-Operations/: solution.cpp  solution.hpp
template/: solution.hpp
utils/: utils.cpp  utils.hpp
